src/objects/GP_Evento_descriptor__c.object
<CustomObject>
    <fields>
        <fullName>Frecuencia_permitida__c</fullName>
        <label>Frecuencia permitida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sin restriccion</fullName>
                </value>
                <value>
                    <fullName>Diaria</fullName>
                </value>
                <value>
                    <fullName>Semanal</fullName>
                </value>
                <value>
                    <fullName>Mensual</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
                <value>
                    <fullName>Unica Vez</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Json_attribute__c</fullName>
        <label>Json attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_evento__c</fullName>
        <label>Tipo de evento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bienvenida</fullName>
                </value>
                <value>
                    <fullName>Confiabilización</fullName>
                </value>
                <value>
                    <fullName>Premio Recarga 3M</fullName>
                </value>
                <value>
                    <fullName>Castigo Recarga</fullName>
                </value>
                <value>
                    <fullName>Recarga por Monto</fullName>
                </value>
                <value>
                    <fullName>Upselling</fullName>
                </value>
                <value>
                    <fullName>Cater</fullName>
                </value>
                <value>
                    <fullName>Antigüedad</fullName>
                </value>
                <value>
                    <fullName>Alta a FOL</fullName>
                </value>
                <value>
                    <fullName>Continuidad FOL</fullName>
                </value>
                <value>
                    <fullName>Alta a Débito Automatico</fullName>
                </value>
                <value>
                    <fullName>Descarga APP</fullName>
                </value>
                <value>
                    <fullName>Alta Nuevo Servicio Core</fullName>
                </value>
                <value>
                    <fullName>Referidos</fullName>
                </value>
                <value>
                    <fullName>Convergente Fiber</fullName>
                </value>
                <value>
                    <fullName>Convergente Arnet</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Transferencia</fullName>
                </value>
                <value>
                    <fullName>Canje</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GP Evento descriptor</label>
    <nameField>
        <label>Evento Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Evento descriptores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>